adding new pages

--- a/style.css
+++ b/style.css
@@ -31,20 +31,21 @@ a, .btn{
 nav{
     justify-content: space-around;
     align-items: center;
-    height:17vh;
+    height:12vh;
     display:flex;
+    border-bottom:1px solid rgba(103,103,103, 0.3) ;
 }
 
 .nav-links{
     gap: 4rem;
     list-style: none;
-    font-size: 2rem;
+    font-size: 1.5rem;
     display: flex;
 }
 
 a{
     color: black;
-    font-weight:450;
+    font: weight 350;
     text-decoration: none;
     text-decoration-color: white;
 }
@@ -57,15 +58,15 @@ a:hover{
 }
 
 .logo{
-    font-size: 5rem;
-    font-weight: 500;
+    font-size: 3rem;
+    font-weight: 550;
 }
 
 .logo:hover{
     cursor: default;
 }
 
-/*HAMBURGER MENU*/
+/************ HAMBURGER MENU ***************/
 
 #hamburger-nav{
     display: none;
@@ -145,10 +146,9 @@ a:hover{
 }
 
 
-/* Section */
-
+/************ Section ***************/
 section{
-    padding-top: 4vh;
+    padding-top: 1vh;
     height: 96vh;
     margin: 0 10rem;
     box-sizing: border-box;
@@ -159,7 +159,8 @@ section{
     display: flex;  
 }
 
-/* Profile section */
+
+/************ Profile Section ***************/
 #profile{
     display: flex;
     justify-content: center;
@@ -167,11 +168,12 @@ section{
     height:70vh;
 }
 
-.section_pic-container{
+.section-pic-container{
     display: flex;
     height:500px;
     width: 500px;
-    align-content: right;
+    justify-content: center; 
+    padding-top: 5rem;
 }
 
 .section_text {
@@ -222,8 +224,8 @@ section{
 /* Button */
 .btn-container {
     display: flex;
-    justify-content: left;
     gap: 1rem;
+    justify-content: left;
 }
 
 .btn {
@@ -234,140 +236,110 @@ section{
     border-radius: 2rem;
 }
 
-.btn-color-1,
-.btn-color-2 {
+
+
+.btn-color-1 {
     color: white;
     background-color:black;
 }
 
-.btn-color-1:hover,
-.btn-color-2:hover {
+.btn-color-1:hover{
     cursor:pointer;
     background-color: gainsboro;
 }
 
-.btn-container {
-    gap: 1rem;
-}
 
 
-/* About Section */
+
+/********** About Section ***********/
 
 #about {
     position: relative;
 }
 
 .about-container {
-    gap: 2rem;
-    margin-bottom: 2rem;
-    margin-top: 0.2rem;
+    margin:0 10rem;
+    max-width: 1400px;
 }
 
-.about-details-container {
-    justify-content: center;
-    flex-direction: column;
-}
-
-.about-container, 
-.about-details-container{
-    display: flex;
-}
-
-.about-pic {
-    border-radius: 2rem;
-}
-
-.arrow {
-    position: absolute;
-    right: -5rem;
-    bottom: 2.5rem;
-}
-
-.details-container {
-    padding: 2rem;
-    flex: 1;
-    background: white;
-    border-radius: 2rem;
-    border:rgb(246, 234, 211) 0.1rem solid;
-    text-align: center;
-}
-
-.section-container {
-    gap: 4rem;
-    height: 60%;
-}
-
-.section_pic-container{
-    height: 400px;
-    width: 400px;
-    margin: auto 0;
-}
-
-/*Experience Section*/
-
-#experience {
-    position: relative
-}
-
-.experience-sub-title {
+.about-title {
     color: blue;
-    font-weight: 600;
-    font-size:1.75rem;
-    margin-bottom:2rem;
+    font-family: Georgia, serif;
 }
 
-.experience-details-container{
+
+.about-container p{
+    line-height: 1.8;
+    text-align: justify;
+    font-size: 20px;
+    font-family: Georgia, serif;
+    margin: 2rem 0;
+
+}
+
+.btn-container-about{
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    padding: 2rem;
 }
 
-.article-container {
-    display:flex;
-    text-align: inital;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 2.5rem;
-    justify-content: space-around;
-}
+/********* Article Section *********/
 
-article {
+article{
     display: flex;
-    width:10rem;
-    justify-content: space-around;
-    gap: 0.5rem;
+    height: 80vh;
+    padding-top: 1vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
 }
 
-article .icon{
-    cursor:default
-}
-
-/* Projects Section*/
-
-
+/************ Projects Section *************/
 #projects {
     position: relative;
+    margin: 0 15rem;
+
 }
 
-.color-container{
-    border-color : rgb(163, 163,163);
-    background: rgb(250, 250, 250)
+.project-container {
+    display: flex;
+    min-height: fit-content;
+    box-sizing: border-box;
+    align-items: left;
+    margin: 0rem 10rem;
+    max-width: 1000px;
 }
 
-.project-img{
-    border-radius: 2rem;
-    width:90%;
-    height:90%
+.project-title{
+    font-family: Georgia, serif;
+    padding: 2rem;
+}
+.project-list {
+    display:flex;
+    flex-direction: column;
+    gap: 2.5rem;
 }
 
-.project-title {
-    margin: 1rem;
-    color: black;
+ul li .date {
+    display: inline-block;
+    width: 20rem;
+    text-align: right;
+    margin-right: 3rem;
 }
 
-.project-btn {
-    color: balck;
-    border-color: rgb(123,123,123)
+li {
+    position: relative;
+    padding: 0;
+    list-style: none;
+}
+.date{
+    font-size:20px;
+    font-style: italic;
+    font-family:Geneva, Verdana, sans-serif;
+}
+a.project-list-name{
+    font-size: 25px;
+    display:inline;
+    text-wrap: wrap;
 }
 
 
@@ -375,46 +347,41 @@ article .icon{
 
 #contact {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 70vh;
+    max-height: 75vh;
 }
 
-.contact-info-upper-container {
-    display:flex;
-    justify-content: center;
-    border-radius: 2rem;
-    border: rgb(85, 85, 85) 0.1rem solid;
-    border-color: rgb(163, 163,163);
-    margin: 2rem auto;
-    padding: 0.5rem;
+.contact-container{
+    position: fixed;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.contact-title{
+    text-align: center;
+    font-size: 4rem;
+}
+.email{
+    text-align: center;
+    font-size: 2rem;
+}
+.contact-social-container{
+    text-align: center;
+    margin-top: 2rem;
+    gap: 2rem;
 }
 
-.contact-info-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.5rem;
-    margin: 1rem;
+.icon{
+    margin: 8px;
+    height: 50px;
 }
 
-.contact-info-container p{
-    font-size: larger;
-}
-
-.contact-icon {
-    cursor: default;
-}
-
-.email-icon {
-    height: 2.5rem;
-}
 
 /*footer section*/
 
 footer{
-    height: 26vh;
-    margin: 0 1rem;
+    height: 10vh;
+    margin: 3rem 1rem;
+    padding-top:0.5rem;
 }
 
 footer p {
