--- a/style.css
+++ b/style.css
@@ -179,6 +179,8 @@ section{
 .section_text {
     align-self: center;
     text-align: left;
+    padding: 2rem;
+    margin-top: 3rem;
 }
 
 .title{
